# bsn-knowledge

./: .bandit  .check_documentation_changes.py  .dockerignore  .documentation_pipeline.json  .env.example  .gitignore  .mcp.json  .mcp.json.backup_1755362923  .mcp.json.backup_codanna  .pre-commit-config-test.yaml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.json  ARCHITECTURE.md  ARCHITECTURE_FROM_CONTEXT7_RESEARCH.md  B3_CLINICAL_DECISION_SUPPORT_IMPLEMENTATION_COMPLETE.md  B3_IMPLEMENTATION_SUMMARY.md  B4_LEARNING_ANALYTICS_IMPLEMENTATION_COMPLETE.md  B5_ADAPTIVE_LEARNING_IMPLEMENTATION_COMPLETE.md  B6_API_DOCUMENTATION_REPORT.md  B8_DOCUMENTATION_COMPLETION_REPORT.md  CHANGELOG.md  CICD_DEPLOYMENT_SUMMARY.md  CI_CD_USAGE_GUIDE.md  CLAUDE.md  CONTENT_GENERATION_IMPLEMENTATION_SUMMARY.md  CONTEXT7_RESEARCH_SUMMARY.md  Dockerfile  ESSENTIAL_8_SECURITY_FIXES_REPORT.md  GROUP_2A_EXECUTION_REPORT.md  GROUP_2B_EXECUTION_REPORT.md  GROUP_3B_IMPLEMENTATION_SUMMARY.md  GROUP_3C_COMPLETION_REPORT.md  INTEGRATION_ARCHITECTURE_SUMMARY.md  LOAD_TESTING_STRATEGY.md  Makefile  Makefile.doc-audit  Makefile.mcp  PIPELINE_TESTING_FRAMEWORK_GUIDE.md  README.md  (+25 more)
.doc-audit-results/: audit_20250810_210351_f92d4efd.md
.doc-audit/scripts/: integrate-makefile.py
.github/workflows/: ci.yml  quality-gates.yml  security-check.yml  test.yml
.user/: bsn_knowledge_mvp_integration_plan.md
cicd_logs/: bsn_knowledge_2025:08:25_gh_ts_log.md  bsn_knowledge_2025:08:28_gh_ts_log.md
data/: bsn-knowledge_test.db  bsn.db
docker/analytics-service/: Dockerfile
docker/api-gateway/: Dockerfile
docker/knowledge-processor/: Dockerfile
docs/: README.md  faq.md  troubleshooting-guide.md
docs/api-reference/: authentication.md  error-handling.md  overview.md  rate-limiting.md
docs/compliance/: hipaa-compliance.md
docs/developer-guide/: getting-started.md  integration-guide.md
docs/technical/: architecture.md  deployment.md
docs/user-guides/: admin-guide.md  instructor-guide.md  student-guide.md
monitoring/: health_monitor.py  monitoring_config.yaml
project_plan/: PROJECT_PLAN_INDEX.md  README.md  makefile_docs_integration.mk  setup_project_tracking.sh
project_plan/current/: CURRENT_PROGRESS_TRACKER.md  REVISED_PHASE3_PLAN.md  REVISED_PHASE3_TRACKER.md  cicd_prompt.xml  e2e_testing_tracker.json  precommit_automation_prompt.xml  prompt.xml
project_plan/git_hooks/: post-commit
scripts/: e2e-health-check.sh  execute_group_1c_test_data.py  generate_medical_test_data.py  init-db.sql  integrate_qdrant_vectors.py  run_e2e_tests.sh  service-health-validator.py  simple-service-validator.py  simple_group_1c_execution.py  simulate-database-validation.py  start-e2e-pipeline.sh  validate-database-setup.py  validate_group_1c_integration.py  verify_group_1c_database.py
src/: auth.py  config.py  dependencies.py
src/api/: __init__.py  error_handlers.py  main.py  validation.py
src/assessment/: __init__.py  competency_framework.py  knowledge_gap_analyzer.py  learning_path_optimizer.py
src/bsn_knowledge/: __init__.py
src/generators/: __init__.py  clinical_decision_support.py  nclex_generator.py  quiz_generator.py  study_guide_generator.py
src/models/: __init__.py  assessment_models.py  educational_content.py  student_profile.py
src/services/: __init__.py  adaptive_learning_engine.py  analytics_service.py  clinical_decision_support.py  content_generation_service.py  content_retrieval.py  learning_analytics.py  performance_monitor.py  ragnostic_client.py
src/utils/: __init__.py  medical_audit_logger.py  medical_input_validator.py  medical_validators.py
testing/: <prompt>.xml  COVERAGE_GAP_ANALYSIS_REPORT.md  E2E_RAGnostic_BSN_Pipeline_Test_Plan.md  GROUP_1A_INFRASTRUCTURE_COMPLETION_REPORT.md  GROUP_1B_TEST_FRAMEWORK_COMPLETION_REPORT.md  GROUP_1C_COMPLETION_REPORT.md  GROUP_1C_TEST_DATA_COMPLETION_REPORT.md  TRACKER_E2E_RAGnostic_BSN_Pipeline.md  execute_prompt.xml  | Parameter | **Acidosis (pH ↓)** | **Al
testing/fixtures/: bsn-knowledge-schema.sql  init-multiple-databases.sh  ragnostic-schema.sql  test-data-seed.sql
tests/: README.md  __init__.py  conftest.py  test_authentication.py  test_b6_performance_benchmarks.py  test_b6_security_validation.py  test_b7_comprehensive_validation.py  test_comprehensive_b6_endpoints.py  test_e2e_pipeline.py  test_e2e_service_integration.py  test_endpoints.py  test_error_handling.py  test_integration.py  test_integration_framework.py  test_orchestration_framework.py  test_performance.py  test_performance_framework_integration.py  test_rate_limiting.py  test_security.py  test_service_fixtures_integration.py
tests/fixtures/: test-db-init.sql
tests/framework/: __init__.py  orchestrator.py  performance_monitoring.py  performance_validator.py
tests/integration/: test_enhanced_integration.py
tests/neo4j/: test_graph_operations.py
tests/performance/: GROUP_2C_IMPLEMENTATION_SUMMARY.md  GROUP_3B_README.md  breaking_point_analyzer.py  breaking_point_test.py  database_performance_suite.py  endurance_testing_suite.py  group_3b_test_runner.py  locust_scenarios.py  memory_profiler.py  network_latency_analyzer.py  perf_001_baseline_performance.py  perf_002_stress_testing.py  perf_003_endurance_testing.py  perf_004_concurrent_user_load.py  perf_005_batch_processing.py  perf_006_database_performance.py  perf_007_memory_profiling.py  perf_008_network_latency.py  performance_benchmarks.py  ragnostic_batch_simulation.py  run_group_2c_performance_tests.py  run_group_3b_advanced_tests.py  test_group_3b_advanced_performance.py
tests/security/: README.md  __init__.py  access_control_tests.py  audit_logging_tests.py  audit_logging_validator.py  auth_security_tests.py  compliance_reporting.py  cross_service_security_tests.py  data_protection_tests.py  demo_security_testing.py  injection_prevention_suite.py  injection_prevention_tests.py  rate_limiting_dos_tests.py  run_security_validation.py  security_config.yaml  security_headers_tests.py  security_headers_validator.py  test_group_3c_complete_security.py
tests/unit/: test_assessment_analytics.py  (+2 more)
(+75 files in other folders)
